--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
+/.DS_Store
 /build
 /captures
+/.idea/
+/projectFilesBackups
 .externalNativeBuild
